lib_LTLIBRARIES = libbagel_smith.la
libbagel_smith_la_SOURCES = smith_info.cc storage.cc storagekramers.cc loopgenerator.cc denom.cc tensor.cc \
spinfreebase.cc subtask.cc queue.cc smith.cc caspt2grad.cc moint.cc diagonal.cc \
\
caspt2/CASPT2.cc caspt2/CASPT2_gamma.cc caspt2/CASPT2_residualq.cc caspt2/CASPT2_corrq.cc caspt2/CASPT2_deciq.cc \
caspt2/CASPT2_densityq.cc caspt2/CASPT2_energyq.cc caspt2/CASPT2_density1q.cc caspt2/CASPT2_density2q.cc \
caspt2/CASPT2_tasks1.cc caspt2/CASPT2_tasks2.cc caspt2/CASPT2_tasks3.cc caspt2/CASPT2_tasks4.cc caspt2/CASPT2_tasks5.cc \
caspt2/CASPT2_tasks6.cc caspt2/CASPT2_tasks7.cc caspt2/CASPT2_tasks8.cc caspt2/CASPT2_tasks9.cc caspt2/CASPT2_tasks10.cc \
caspt2/CASPT2_tasks11.cc caspt2/CASPT2_tasks12.cc caspt2/CASPT2_tasks13.cc caspt2/CASPT2_tasks14.cc caspt2/CASPT2_tasks15.cc \
caspt2/CASPT2_tasks16.cc caspt2/CASPT2_tasks17.cc caspt2/CASPT2_gen1.cc caspt2/CASPT2_gen2.cc \
\
mrci/MRCI.cc mrci/MRCI_gamma.cc mrci/MRCI_sourceq.cc mrci/MRCI_residualq.cc mrci/MRCI_normq.cc \
mrci/MRCI_tasks1.cc mrci/MRCI_tasks2.cc mrci/MRCI_tasks3.cc mrci/MRCI_tasks4.cc mrci/MRCI_tasks5.cc \
mrci/MRCI_tasks6.cc mrci/MRCI_tasks7.cc mrci/MRCI_tasks8.cc mrci/MRCI_tasks9.cc mrci/MRCI_tasks10.cc \
mrci/MRCI_tasks11.cc mrci/MRCI_tasks12.cc mrci/MRCI_tasks13.cc mrci/MRCI_tasks14.cc mrci/MRCI_tasks15.cc \
mrci/MRCI_tasks16.cc mrci/MRCI_tasks17.cc mrci/MRCI_tasks18.cc mrci/MRCI_tasks19.cc mrci/MRCI_tasks20.cc \
mrci/MRCI_gen1.cc mrci/MRCI_gen2.cc mrci/MRCI_gen3.cc \
\
relcaspt2/RelCASPT2.cc relcaspt2/RelCASPT2_gamma.cc relcaspt2/RelCASPT2_residualq.cc relcaspt2/RelCASPT2_sourceq.cc \
relcaspt2/RelCASPT2_gen1.cc relcaspt2/RelCASPT2_tasks1.cc relcaspt2/RelCASPT2_tasks2.cc relcaspt2/RelCASPT2_tasks3.cc \
relcaspt2/RelCASPT2_tasks4.cc relcaspt2/RelCASPT2_tasks5.cc \
\
relmrci/RelMRCI.cc relmrci/RelMRCI_gamma.cc relmrci/RelMRCI_sourceq.cc relmrci/RelMRCI_residualq.cc relmrci/RelMRCI_normq.cc \
relmrci/RelMRCI_tasks1.cc relmrci/RelMRCI_tasks2.cc relmrci/RelMRCI_tasks3.cc relmrci/RelMRCI_tasks4.cc relmrci/RelMRCI_tasks5.cc \
relmrci/RelMRCI_tasks6.cc relmrci/RelMRCI_tasks7.cc relmrci/RelMRCI_tasks8.cc relmrci/RelMRCI_tasks9.cc relmrci/RelMRCI_tasks10.cc \
relmrci/RelMRCI_tasks11.cc relmrci/RelMRCI_tasks12.cc relmrci/RelMRCI_tasks13.cc relmrci/RelMRCI_tasks14.cc relmrci/RelMRCI_tasks15.cc \
relmrci/RelMRCI_tasks16.cc relmrci/RelMRCI_gen1.cc relmrci/RelMRCI_gen2.cc

AM_CXXFLAGS=-I$(top_srcdir)
