AUTOMAKE_OPTIONS = subdir-objects
lib_LTLIBRARIES = libbagel_smith.la
libbagel_smith_la_SOURCES = smith_info.cc storage.cc storagekramers.cc loopgenerator.cc denom.cc tensor.cc \
spinfreebase.cc subtask.cc smith.cc caspt2grad.cc moint.cc diagonal.cc \
\
caspt2/CASPT2.cc caspt2/CASPT2_gamma.cc caspt2/CASPT2_residualq.cc caspt2/CASPT2_corrq.cc caspt2/CASPT2_deciq.cc \
caspt2/CASPT2_densityq.cc caspt2/CASPT2_sourceq.cc caspt2/CASPT2_density1q.cc caspt2/CASPT2_density2q.cc \
caspt2/CASPT2_tasks1.cc caspt2/CASPT2_tasks2.cc caspt2/CASPT2_tasks3.cc caspt2/CASPT2_tasks4.cc caspt2/CASPT2_tasks5.cc \
caspt2/CASPT2_tasks6.cc caspt2/CASPT2_tasks7.cc caspt2/CASPT2_tasks8.cc caspt2/CASPT2_tasks9.cc caspt2/CASPT2_tasks10.cc \
caspt2/CASPT2_tasks11.cc caspt2/CASPT2_tasks12.cc caspt2/CASPT2_tasks13.cc caspt2/CASPT2_tasks14.cc caspt2/CASPT2_tasks15.cc \
caspt2/CASPT2_tasks16.cc caspt2/CASPT2_gen1.cc caspt2/CASPT2_gen2.cc caspt2/CASPT2_gen3.cc caspt2/CASPT2_gen4.cc \
caspt2/CASPT2_gen5.cc caspt2/CASPT2_gen6.cc caspt2/CASPT2_gen7.cc caspt2/CASPT2_gen8.cc \
caspt2/CASPT2_gen9.cc caspt2/CASPT2_gen10.cc caspt2/CASPT2_gen11.cc caspt2/CASPT2_gen12.cc \
caspt2/CASPT2_gen13.cc caspt2/CASPT2_gen14.cc caspt2/CASPT2_gen15.cc caspt2/CASPT2_gen16.cc \
\
MRCI.cc MRCI_gamma.cc MRCI_sourceq.cc MRCI_residualq.cc MRCI_normq.cc \
MRCI_gen1.cc MRCI_tasks1.cc MRCI_gen2.cc MRCI_tasks2.cc MRCI_gen3.cc MRCI_tasks3.cc MRCI_gen4.cc MRCI_tasks4.cc MRCI_gen5.cc MRCI_tasks5.cc \
MRCI_gen6.cc MRCI_tasks6.cc MRCI_gen7.cc MRCI_tasks7.cc MRCI_gen8.cc MRCI_tasks8.cc MRCI_gen9.cc MRCI_tasks9.cc MRCI_gen10.cc MRCI_tasks10.cc \
MRCI_gen11.cc MRCI_tasks11.cc MRCI_gen12.cc MRCI_tasks12.cc MRCI_gen13.cc MRCI_tasks13.cc MRCI_gen14.cc MRCI_tasks14.cc MRCI_gen15.cc MRCI_tasks15.cc \
MRCI_gen16.cc MRCI_tasks16.cc MRCI_gen17.cc MRCI_tasks17.cc MRCI_gen18.cc MRCI_tasks18.cc MRCI_gen19.cc MRCI_tasks19.cc MRCI_gen20.cc MRCI_tasks20.cc \
\
relcaspt2/RelCASPT2.cc relcaspt2/RelCASPT2_gamma.cc relcaspt2/RelCASPT2_residualq.cc relcaspt2/RelCASPT2_sourceq.cc \
relcaspt2/RelCASPT2_gen1.cc relcaspt2/RelCASPT2_gen2.cc relcaspt2/RelCASPT2_gen3.cc relcaspt2/RelCASPT2_gen4.cc relcaspt2/RelCASPT2_gen5.cc \
relcaspt2/RelCASPT2_tasks1.cc relcaspt2/RelCASPT2_tasks2.cc relcaspt2/RelCASPT2_tasks3.cc relcaspt2/RelCASPT2_tasks4.cc relcaspt2/RelCASPT2_tasks5.cc \
\
RelMRCI.cc RelMRCI_gamma.cc RelMRCI_sourceq.cc RelMRCI_residualq.cc RelMRCI_normq.cc \
RelMRCI_gen1.cc RelMRCI_tasks1.cc RelMRCI_gen2.cc RelMRCI_tasks2.cc RelMRCI_gen3.cc RelMRCI_tasks3.cc RelMRCI_gen4.cc RelMRCI_tasks4.cc RelMRCI_gen5.cc RelMRCI_tasks5.cc \
RelMRCI_gen6.cc RelMRCI_tasks6.cc RelMRCI_gen7.cc RelMRCI_tasks7.cc RelMRCI_gen8.cc RelMRCI_tasks8.cc RelMRCI_gen9.cc RelMRCI_tasks9.cc RelMRCI_gen10.cc RelMRCI_tasks10.cc \
RelMRCI_gen11.cc RelMRCI_tasks11.cc RelMRCI_gen12.cc RelMRCI_tasks12.cc RelMRCI_gen13.cc RelMRCI_tasks13.cc RelMRCI_gen14.cc RelMRCI_tasks14.cc RelMRCI_gen15.cc RelMRCI_tasks15.cc \
RelMRCI_gen16.cc RelMRCI_tasks16.cc

AM_CXXFLAGS=-I$(top_srcdir)
