AUTOMAKE_OPTIONS = subdir-objects
noinst_LTLIBRARIES = libbagel_smith.la
libbagel_smith_la_SOURCES = smith_info.cc indexrange.cc storage.cc storagekramers.cc denom.cc tensor.cc futuretensor.cc multitensor.cc \
spinfreebase.cc subtask.cc smith.cc caspt2energy.cc caspt2grad.cc caspt2grad_util.cc moint.cc diagonal.cc queue.cc orthogonal.cc orthogonal_shift.cc\
caspt2/CASPT2.cc caspt2/CASPT2_gamma.cc caspt2/CASPT2_normq.cc caspt2/CASPT2_sourceq.cc caspt2/CASPT2_density1q.cc caspt2/CASPT2_density2q.cc \
caspt2/CASPT2_deciq.cc caspt2/CASPT2_residualq.cc caspt2/CASPT2_densityq.cc \
caspt2/CASPT2_tasks1.cc caspt2/CASPT2_tasks2.cc caspt2/CASPT2_tasks3.cc caspt2/CASPT2_tasks4.cc caspt2/CASPT2_tasks5.cc \
caspt2/CASPT2_tasks6.cc caspt2/CASPT2_tasks7.cc caspt2/CASPT2_tasks8.cc caspt2/CASPT2_tasks9.cc caspt2/CASPT2_tasks10.cc \
caspt2/CASPT2_tasks11.cc caspt2/CASPT2_tasks12.cc caspt2/CASPT2_tasks13.cc caspt2/CASPT2_tasks14.cc caspt2/CASPT2_tasks15.cc \
caspt2/CASPT2_tasks16.cc caspt2/CASPT2_gen1.cc caspt2/CASPT2_gen2.cc caspt2/CASPT2_gen3.cc caspt2/CASPT2_gen4.cc \
caspt2/CASPT2_gen5.cc caspt2/CASPT2_gen6.cc caspt2/CASPT2_gen7.cc caspt2/CASPT2_gen8.cc \
caspt2/CASPT2_gen9.cc caspt2/CASPT2_gen10.cc caspt2/CASPT2_gen11.cc caspt2/CASPT2_gen12.cc \
caspt2/CASPT2_gen13.cc caspt2/CASPT2_gen14.cc caspt2/CASPT2_gen15.cc caspt2/CASPT2_gen16.cc \
caspt2/CASPT2_contract.cc \
caspt2/SPCASPT2.cc caspt2/SPCASPT2_gamma.cc caspt2/SPCASPT2_densityq.cc caspt2/SPCASPT2_density1q.cc caspt2/SPCASPT2_gen1.cc \
caspt2/SPCASPT2_gen2.cc caspt2/SPCASPT2_gen3.cc caspt2/SPCASPT2_gen4.cc caspt2/SPCASPT2_gen5.cc caspt2/SPCASPT2_gen6.cc \
caspt2/SPCASPT2_tasks1.cc caspt2/SPCASPT2_tasks2.cc caspt2/SPCASPT2_tasks3.cc caspt2/SPCASPT2_tasks4.cc caspt2/SPCASPT2_tasks5.cc \
caspt2/SPCASPT2_tasks6.cc \
\
caspt2/MSCASPT2.cc caspt2/MSCASPT2_gamma.cc caspt2/MSCASPT2_densityq.cc caspt2/MSCASPT2_density1q.cc caspt2/MSCASPT2_density2q.cc caspt2/MSCASPT2_deciq.cc \
caspt2/MSCASPT2_deci2q.cc caspt2/MSCASPT2_deci3q.cc caspt2/MSCASPT2_deci4q.cc \
caspt2/MSCASPT2_gen1.cc caspt2/MSCASPT2_gen2.cc caspt2/MSCASPT2_gen3.cc caspt2/MSCASPT2_gen4.cc caspt2/MSCASPT2_gen5.cc \
caspt2/MSCASPT2_gen6.cc caspt2/MSCASPT2_gen7.cc caspt2/MSCASPT2_gen8.cc caspt2/MSCASPT2_gen9.cc caspt2/MSCASPT2_gen10.cc \
caspt2/MSCASPT2_gen11.cc caspt2/MSCASPT2_gen12.cc \
caspt2/MSCASPT2_tasks1.cc caspt2/MSCASPT2_tasks2.cc caspt2/MSCASPT2_tasks3.cc caspt2/MSCASPT2_tasks4.cc caspt2/MSCASPT2_tasks5.cc \
caspt2/MSCASPT2_tasks6.cc caspt2/MSCASPT2_tasks7.cc caspt2/MSCASPT2_tasks8.cc caspt2/MSCASPT2_tasks9.cc caspt2/MSCASPT2_tasks10.cc \
caspt2/MSCASPT2_tasks11.cc caspt2/MSCASPT2_tasks12.cc caspt2/MSCASPT2_shift.cc \
\
caspt2/MSCASPT2_contract.cc \
mrci/MRCI.cc mrci/MRCI_gamma.cc mrci/MRCI_sourceq.cc mrci/MRCI_normq.cc \
mrci/MRCI_residualq1.cc mrci/MRCI_residualq2.cc mrci/MRCI_residualq3.cc mrci/MRCI_residualq4.cc mrci/MRCI_residualq5.cc \
mrci/MRCI_residualq6.cc mrci/MRCI_residualq7.cc mrci/MRCI_residualq8.cc mrci/MRCI_residualq9.cc \
mrci/MRCI_tasks1.cc mrci/MRCI_tasks2.cc mrci/MRCI_tasks3.cc mrci/MRCI_tasks4.cc mrci/MRCI_tasks5.cc \
mrci/MRCI_tasks6.cc mrci/MRCI_tasks7.cc mrci/MRCI_tasks8.cc mrci/MRCI_tasks9.cc mrci/MRCI_tasks10.cc \
mrci/MRCI_tasks11.cc mrci/MRCI_tasks12.cc mrci/MRCI_tasks13.cc mrci/MRCI_tasks14.cc mrci/MRCI_tasks15.cc \
mrci/MRCI_tasks16.cc mrci/MRCI_tasks17.cc mrci/MRCI_tasks18.cc mrci/MRCI_tasks19.cc mrci/MRCI_tasks20.cc \
mrci/MRCI_gen1.cc mrci/MRCI_gen2.cc mrci/MRCI_gen3.cc mrci/MRCI_gen4.cc mrci/MRCI_gen5.cc mrci/MRCI_gen6.cc \
mrci/MRCI_gen7.cc mrci/MRCI_gen8.cc mrci/MRCI_gen9.cc mrci/MRCI_gen10.cc mrci/MRCI_gen11.cc mrci/MRCI_gen12.cc \
mrci/MRCI_gen13.cc mrci/MRCI_gen14.cc mrci/MRCI_gen15.cc mrci/MRCI_gen16.cc mrci/MRCI_gen17.cc mrci/MRCI_gen18.cc \
mrci/MRCI_gen19.cc mrci/MRCI_gen20.cc \
\
relcaspt2/RelCASPT2.cc relcaspt2/RelCASPT2_gamma.cc relcaspt2/RelCASPT2_residualq.cc relcaspt2/RelCASPT2_normq.cc relcaspt2/RelCASPT2_sourceq.cc \
relcaspt2/RelCASPT2_gen1.cc relcaspt2/RelCASPT2_gen2.cc relcaspt2/RelCASPT2_gen3.cc relcaspt2/RelCASPT2_gen4.cc relcaspt2/RelCASPT2_gen5.cc \
relcaspt2/RelCASPT2_gen6.cc \
relcaspt2/RelCASPT2_tasks1.cc relcaspt2/RelCASPT2_tasks2.cc relcaspt2/RelCASPT2_tasks3.cc relcaspt2/RelCASPT2_tasks4.cc relcaspt2/RelCASPT2_tasks5.cc \
relcaspt2/RelCASPT2_tasks6.cc \
\
casa/CASA.cc casa/CASA_gamma.cc casa/CASA_residualq.cc casa/CASA_sourceq.cc \
casa/CASA_gen1.cc casa/CASA_gen2.cc casa/CASA_gen3.cc casa/CASA_gen4.cc casa/CASA_gen5.cc casa/CASA_gen6.cc \
casa/CASA_tasks1.cc casa/CASA_tasks2.cc casa/CASA_tasks3.cc casa/CASA_tasks4.cc casa/CASA_tasks5.cc casa/CASA_tasks6.cc \
\
relcasa/RelCASA.cc relcasa/RelCASA_gamma.cc relcasa/RelCASA_residualq.cc relcasa/RelCASA_sourceq.cc \
relcasa/RelCASA_gen1.cc relcasa/RelCASA_gen2.cc relcasa/RelCASA_gen3.cc relcasa/RelCASA_gen4.cc relcasa/RelCASA_gen5.cc \
relcasa/RelCASA_gen6.cc \
relcasa/RelCASA_tasks1.cc relcasa/RelCASA_tasks2.cc relcasa/RelCASA_tasks3.cc relcasa/RelCASA_tasks4.cc relcasa/RelCASA_tasks5.cc \
relcasa/RelCASA_tasks6.cc \
\
relmrci/RelMRCI.cc relmrci/RelMRCI_gamma.cc relmrci/RelMRCI_sourceq.cc relmrci/RelMRCI_normq.cc \
relmrci/RelMRCI_residualq1.cc relmrci/RelMRCI_residualq2.cc relmrci/RelMRCI_residualq3.cc \
relmrci/RelMRCI_residualq4.cc relmrci/RelMRCI_residualq5.cc relmrci/RelMRCI_residualq6.cc \
relmrci/RelMRCI_tasks1.cc relmrci/RelMRCI_tasks2.cc relmrci/RelMRCI_tasks3.cc relmrci/RelMRCI_tasks4.cc relmrci/RelMRCI_tasks5.cc \
relmrci/RelMRCI_tasks6.cc relmrci/RelMRCI_tasks7.cc relmrci/RelMRCI_tasks8.cc relmrci/RelMRCI_tasks9.cc relmrci/RelMRCI_tasks10.cc \
relmrci/RelMRCI_tasks11.cc relmrci/RelMRCI_tasks12.cc relmrci/RelMRCI_tasks13.cc relmrci/RelMRCI_tasks14.cc relmrci/RelMRCI_tasks15.cc \
relmrci/RelMRCI_tasks16.cc relmrci/RelMRCI_gen1.cc relmrci/RelMRCI_gen2.cc relmrci/RelMRCI_gen3.cc relmrci/RelMRCI_gen4.cc \
relmrci/RelMRCI_gen5.cc relmrci/RelMRCI_gen6.cc relmrci/RelMRCI_gen7.cc relmrci/RelMRCI_gen8.cc relmrci/RelMRCI_gen9.cc relmrci/RelMRCI_gen10.cc \
relmrci/RelMRCI_gen11.cc relmrci/RelMRCI_gen12.cc relmrci/RelMRCI_gen13.cc relmrci/RelMRCI_gen14.cc relmrci/RelMRCI_gen15.cc relmrci/RelMRCI_gen16.cc

AM_CXXFLAGS=-I$(top_srcdir)
