noinst_LTLIBRARIES = libbagel_asd_dmrg.la
libbagel_asd_dmrg_la_SOURCES = asd_dmrg.cc asd_dmrg_compute.cc rasd.cc product_civec.cc \
                               product_rasci.cc product_denom.cc product_guess.cc product_modelci.cc \
                               block_ops_1.cc block_ops_2.cc gamma_forest_prod_asd.cc dmrg_block.cc \
                               kronecker.cc phi_k_lists.cc phi_ijk_lists.cc form_sigma.cc form_sigma_ci.cc
AM_CXXFLAGS=-I$(top_srcdir)
