lib_LTLIBRARIES = libbagel_asd_orbital.la
libbagel_asd_orbital_la_SOURCES = casscf.cc \
                                  bfgs.cc bfgs_denom.cc bfgs_grad.cc \
                                  rasscf.cc \
                                  rasbfgs.cc rasbfgs_denom.cc rasbfgs_grad.cc
AM_CXXFLAGS=-I$(top_srcdir)
