lib_LTLIBRARIES = libbagel_asd_orbital.la
libbagel_asd_orbital_la_SOURCES = construct_asd_oo.cc oo.cc\
                                  bfgs.cc bfgs_grad.cc bfgs_denom.cc
#                                  casscf.cc \
#                                  rasscf.cc \
#                                  rasbfgs.cc rasbfgs_denom.cc rasbfgs_grad.cc
AM_CXXFLAGS=-I$(top_srcdir)
