lib_LTLIBRARIES = libbagel_asd_orbopt.la
libbagel_asd_orbopt_la_SOURCES = asdscf.cc \
                             superci.cc superci_sigma.cc supercimicro.cc \
                             bfgs.cc \
                             hybrid.cc \
                             asdscf2.cc \
                             bfgs2.cc bfgs2_denom.cc bfgs2_grad.cc
#qvec.cc supercigrad.cc casbfgs.cc cashybrid.cc
AM_CXXFLAGS=-I$(top_srcdir)
