lib_LTLIBRARIES = libbagel_fci.la
libbagel_fci_la_SOURCES = fci.cc mofile.cc harrison_compute.cc knowles_compute.cc harrison_denom.cc knowles_denom.cc fci_rdm.cc determinants.cc civec.cc dvec.cc space.cc \
distcivec.cc distfci.cc properties.cc dist_form_sigma.cc modelci.cc
AM_CXXFLAGS=-I$(top_srcdir)
