noinst_LTLIBRARIES = libbagel_fci.la
libbagel_fci_la_SOURCES = fci_base.cc fci.cc mofile.cc harrison_compute.cc knowles_compute.cc harrison_denom.cc knowles_denom.cc fci_rdm.cc fci_rdm_alpha.cc fci_rdmderiv.cc \
fci_io.cc determinants.cc civec.cc dvec.cc space.cc distcivec.cc distfci.cc distfci_rdm.cc dist_form_sigma.cc modelci.cc
AM_CXXFLAGS=-I$(top_srcdir)
