noinst_LTLIBRARIES = libbagel_zfci.la
libbagel_zfci_la_SOURCES = relspace.cc zmofile.cc zharrison_denom.cc zharrison_compute.cc zharrison.cc zharrison_rdm.cc reldvec.cc zharrison_parallel.cc zharrison_io.cc \
                           reljop.cc relfci.cc jop_london.cc fci_london.cc
AM_CXXFLAGS=-I$(top_srcdir)
