AUTOMAKE_OPTIONS = subdir-objects
noinst_LTLIBRARIES = libbagel_math.la
libbagel_math_la_SOURCES = quatern.cc matrix_base.cc matrix.cc zmatrix.cc matview.cc distmatrix.cc distzmatrix.cc distmatrix_base.cc \
csymmatrix.cc jacobi.cc transpose.cc ztranspose.cc sparsematrix.cc blocksparsematrix.cc xyzfile.cc algo.cc btas_interface.cc preallocarray.cc sphharmonics.cc \
zquatev/zquatev.cc zquatev/blocked.cc zquatev/unblocked.cc zquatev/transpose.cc
AM_CXXFLAGS=-I$(top_srcdir)
